--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,16 @@
         <!-- For example, you can set text color, text style, etc. -->
     </style>
 
+    <style name="SplashTheme" parent="Theme.Material3.Light.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:windowBackground">@drawable/splash_activity_background</item>
+
+        <!-- Customize other attributes as needed -->
+        <!-- For example, you can set text color, text style, etc. -->
+    </style>
+
     <style name="Theme.ShinArena" parent="Base.Theme.ShinArena" />
 
     <style name="Theme.ShinArena.NoActionBar">
