some minor changes

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,18 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/register"
+    android:background="@drawable/login1"
     tools:context=".Buyers.RegisterActivity">
 
 
-
     <ImageView
+        android:id="@+id/register_applogo"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:id="@+id/register_applogo"
-        android:src="@drawable/applogo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"/>
+        android:layout_marginTop="200dp"
+        android:src="@drawable/applogo" />
 
     <EditText
         android:layout_width="match_parent"
